--- a/app/src/main/res/layout/activity_app_bar.xml
+++ b/app/src/main/res/layout/activity_app_bar.xml
@@ -9,22 +9,23 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        app:liftOnScroll="true"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.HomeWord.AppBarOverlay"
+        app:liftOnScroll="true">
 
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/topAppBar"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="App Bar"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:menu="@menu/top_app_bar"
             app:navigationIcon="@drawable/ic_menu"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme" />
+            app:title="App Bar" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
