--- a/app/src/main/res/layout/add_services_item.xml
+++ b/app/src/main/res/layout/add_services_item.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <EditText
-            android:id="@+id/service"
+            android:id="@+id/add_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -19,13 +23,14 @@
             android:layout_marginBottom="4dp"
             android:ems="10"
             android:gravity="center|start"
-            android:hint="Enter title"
+            android:hint="@string/add_enter_title"
             android:inputType="textPersonName"
             android:minHeight="48dp"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:autofillHints="" />
 
         <EditText
-            android:id="@+id/description"
+            android:id="@+id/add_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -34,22 +39,35 @@
             android:layout_marginBottom="4dp"
             android:ellipsize="middle"
             android:ems="10"
+            android:hint="Enter description"
             android:inputType="textMultiLine|textPersonName"
             android:maxLines="3"
             android:minHeight="48dp"
-            android:text="Name" />
+            android:importantForAutofill="no" />
 
         <LinearLayout
+            android:id="@+id/addlinearlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_margin="4dp"
+            android:orientation="horizontal"
+            android:padding="4dp">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/add_photo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
+                android:layout_weight="8"
+                android:onClick="add_photo"
+                android:padding="4dp"
+                android:text="@string/add_photo" />
+
+            <ImageView
+                android:id="@+id/add_imageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_weight="2"
+                android:contentDescription="Image du service !" />
         </LinearLayout>
     </LinearLayout>
 
